# CompileTimeUI

./: .gitignore  AreUniqueTypes.hpp  CMakeLists.txt  README.md  UI.hpp  main.cpp
Commands/: Calc.cpp  Calc.h  Print.cpp  Print.h  Say.cpp  Say.h  Trigger.h
